--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "@tetrascience-npm/tetrascience-react-ui": "^0.2.0",
     "plotly.js-dist-min": "^3.3.1",
     "react-plotly.js": "^2.6.0"
+  },
+  "optionalDependencies": {
+    "@esbuild/darwin-arm64": "^0.27.2"
   }
 }
