Trigger Vercel deployment on main branch
- Update vercel.json to explicitly enable deployment for main branch
- This should trigger Vercel to deploy from the main branch

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
   "outputDirectory": "packages/client/dist",
   "installCommand": "yarn install",
   "framework": "vite",
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
