--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "yarn build:client",
+  "buildCommand": "cd packages/client && yarn install && yarn build",
   "outputDirectory": "packages/client/dist",
   "installCommand": "yarn install",
   "framework": "vite",
