Fix workspace name mismatch and update Vercel config
- Fix client package name to match workspace references (@ts-design-patterns/client)
- Update Vercel build command to use workspace command correctly

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ts-tdp-sci-ux/client",
+  "name": "@ts-design-patterns/client",
   "description": "Tetra Scientist Experience",
   "private": true,
   "version": "0.1.0",
