--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "cd packages/client && yarn install && yarn build",
+  "buildCommand": "cd packages/client && yarn build",
   "outputDirectory": "packages/client/dist",
   "installCommand": "yarn install",
   "framework": "vite",
+  "rootDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
