Remove invalid rootDirectory property from vercel.json
- Fix Vercel schema validation error
- Remove rootDirectory which is not a valid Vercel property

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "buildCommand": "cd packages/client && yarn build",
+  "buildCommand": "yarn build:client",
   "outputDirectory": "packages/client/dist",
   "installCommand": "yarn install",
   "framework": "vite",
-  "rootDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
