update filter view

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ts-design-patterns/client",
+  "name": "@ts-tdp-sci-ux/client",
   "description": "Tetra Scientist Experience",
   "private": true,
   "version": "0.1.0",
