--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "storybook": "8.6.14",
     "@storybook/*": "8.6.14"
   },
-  "optionalDependencies": {
-    "@esbuild/darwin-arm64": "^0.27.2"
+  "dependencies": {
+    "@tetrascience-npm/tetrascience-react-ui": "^0.2.0",
+    "plotly.js-dist-min": "^3.3.1",
+    "react-plotly.js": "^2.6.0"
   }
 }
