--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "3.600.0",
+    "@tetrascience-npm/tetrascience-react-ui": "^0.2.0",
     "axios": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
