Fix workspace names in build scripts
- Update client workspace references from @ts-design-patterns/client to @ts-tdp-sci-ux/client
- Fixes build:client, lint, test, and other client-related scripts

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "setup-env": "node scripts/setup-env.js",
     "dev:no-env": "yarn workspace @ts-design-patterns/server dev",
     "dev": "yarn setup-env && dotenvx run --overload -f .env.server -- yarn dev:no-env",
-    "build": "yarn workspace @ts-design-patterns/client build && yarn workspace @ts-design-patterns/server build",
-    "build:client": "yarn workspace @ts-design-patterns/client build",
+    "build": "yarn workspace @ts-tdp-sci-ux/client build && yarn workspace @ts-design-patterns/server build",
+    "build:client": "yarn workspace @ts-tdp-sci-ux/client build",
     "build:server": "yarn workspace @ts-design-patterns/server build",
-    "lint": "yarn workspace @ts-design-patterns/client lint && yarn workspace @ts-design-patterns/server lint",
-    "preview": "yarn workspace @ts-design-patterns/client preview",
-    "test": "yarn workspace @ts-design-patterns/client test",
-    "test:coverage": "yarn workspace @ts-design-patterns/client test:coverage",
-    "test:browser": "yarn workspace @ts-design-patterns/client test:browser",
+    "lint": "yarn workspace @ts-tdp-sci-ux/client lint && yarn workspace @ts-design-patterns/server lint",
+    "preview": "yarn workspace @ts-tdp-sci-ux/client preview",
+    "test": "yarn workspace @ts-tdp-sci-ux/client test",
+    "test:coverage": "yarn workspace @ts-tdp-sci-ux/client test:coverage",
+    "test:browser": "yarn workspace @ts-tdp-sci-ux/client test:browser",
     "docker:build": "docker build . -t ts-design-patterns --build-arg DEPLOYMENT_ENVIRONMENT=local",
     "docker:build-for-publish": "docker build . -t ts-design-patterns:latest --platform linux/amd64 --build-arg DEPLOYMENT_ENVIRONMENT=production && docker save ts-design-patterns:latest -o image.tar",
     "docker:start": "docker run --rm -p 3000:3000 --env-file .env.server --name ts-design-patterns ts-design-patterns"
