--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "yarn build",
+  "buildCommand": "yarn build:client",
   "outputDirectory": "packages/client/dist",
   "installCommand": "yarn install"
 }
