--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,10 @@
     "node": ">=20.0.0 <21.0.0"
   },
   "dependencies": {
+    "3dmol": "^2.5.4",
+    "@rdkit/rdkit": "^2025.3.4-1.0.0",
+    "igv": "^3.7.3",
+    "molstar": "^5.6.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-markdown": "^10.1.0",
