--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "3dmol": "^2.5.4",
+    "@modelcontextprotocol/sdk": "^1.27.1",
     "@rdkit/rdkit": "^2025.3.4-1.0.0",
     "igv": "^3.7.3",
     "molstar": "^5.6.1",
